# smalltalk-a-vm

./: .clangd  .gitignore  AUDIT_REPORT.md  CLAUDE.md  CMakeLists.txt  README.md
.beads/: metadata.json
docs/: PROJECT_HISTORY.md  PROJECT_STATUS.md  smalltalk-a-vm-setup-checklist.md
docs/architecture/: package-manifest-design-note.md  smalltalk-a-vision-architecture-v3.md
docs/decisions/: 001-implementation-language.md  002-public-api-boundary.md  003-internal-header-convention.md  004-live-update-semantics.md  005-api-error-reporting.md  006-handle-lifecycle.md  007-object-header-layout.md  008-mailbox-and-message-copy.md  009-scheduler.md  010-frame-layout.md  011-async-io.md  012-image-format.md  013-native-bridge.md  014-stack-slab-growth.md
docs/ecosystem/: class-library-ecosystem-plan.md  library-design-conventions.md
docs/implementation/: phase1-implementation-plan.md
docs/language/: bytecode-spec.md
docs/spikes/: spike-001-objheader.md  spike-002-mailbox.md  spike-003-scheduler.md  spike-004-frame-layout.md  spike-005-async-io.md  spike-006-image.md  spike-007-native-bridge.md
examples/embed_basic/: CMakeLists.txt  main.c
include/sta/: vm.h
kernel/: Array.st  ArrayedCollection.st  Association.st  ByteArray.st  Character.st  Collection.st  False.st  Magnitude.st  Number.st  Object.st  OrderedCollection.st  SequenceableCollection.st  SmallInteger.st  String.st  Symbol.st  True.st  UndefinedObject.st
src/actor/: actor.c  actor.h  deep_copy.c  deep_copy.h  future.c  future.h  future_table.c  future_table.h  mailbox.c  mailbox.h  mailbox_msg.c  mailbox_msg.h  mailbox_spike.c  mailbox_spike.h  registry.c  registry.h  supervisor.c  supervisor.h
src/bootstrap/: bootstrap.c  bootstrap.h  filein.c  filein.h  kernel_load.c  kernel_load.h
src/bridge/: bridge_spike.c  bridge_spike.h
src/compiler/: ast.c  ast.h  codegen.c  codegen.h  compiler.c  compiler.h  parser.c  parser.h  scanner.c  scanner.h
src/gc/: gc.c  gc.h
src/image/: image.c  image.h  image_spike.c  image_spike.h
src/io/: io_spike.c  io_spike.h
src/scheduler/: deque.c  deque.h  scheduler.c  scheduler.h  scheduler_spike.c  scheduler_spike.h
src/vm/: actor_spike.h  class_table.c  class_table.h  compiled_method.c  compiled_method.h  eval.c  format.h  frame.c  frame.h  frame_spike.c  frame_spike.h  handle.c  handle.h  handler.c  handler.h  heap.c  heap.h  immutable_space.c  immutable_space.h  interpreter.c  interpreter.h  method_dict.c  method_dict.h  oop.c  oop.h  oop_spike.h  primitive_table.c  primitive_table.h  selector.c  selector.h  special_objects.c  special_objects.h  special_selectors.c  special_selectors.h  symbol_table.c  symbol_table.h  vm.c  vm_internal.h  vm_state.h
tests/: CMakeLists.txt  test_actor_dispatch.c  test_actor_epic2.c  test_actor_heap.c  test_actor_lifecycle.c  test_actor_refcount.c  test_actor_registry.c  test_actor_send.c  test_arithmetic_prims.c  test_ask_mailbox_full.c  test_ask_send.c  test_basic_new.c  test_basic_new_size.c  test_batch1_integration.c  test_batch2_integration.c  test_batch3_collections.c  test_batch4_hash.c  test_batch4_integration.c  test_batch4_number.c  test_batch4_symbol.c  test_bootstrap.c  test_bridge_spike.c  test_byte_prims.c  test_capstone.c  test_class_creation.c  test_class_table.c  test_closure_integration.c  test_closures.c  test_codegen.c  test_compiled_method.c  test_compiler_integration.c  test_deep_copy.c  test_deep_copy_growth.c  test_epic0_verify.c  test_epic3_integration.c  test_eval_integration.c  test_exceptions.c  test_failure_detection.c  test_filein.c  test_format.c  (+69 more)
tests/fixtures/: escaped.st  simple.st  smoke.st
